[package]
name = "data_sculptor"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ErikSeewald/DataSculptor"

[dependencies]
iced = { version = "0.13.1"}
serde_json = "1.0"
chrono = "0.4"
rfd = "0.15.2"
image = "0.25.5"
indexmap = { version = "2.2.6", features = ["serde"] }
